# ferms

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ALGORITHMS.md  USER_GUIDE.md
sample_data/: accidents.csv  axis_ref.csv  climate.csv  inventory.csv  measures.csv  traffic.csv  treatments.csv
scripts/: package_linux.sh  package_win.bat
src/: app.py
src/core/: crs.py  indices.py  io.py  multicriteria.py  optimizer.py  prognosis.py  projection.py  reference_axis.py  reporting.py  segmentation.py  treatments.py
src/data/: config_default.yaml  schemas.py
src/gui/: main_window.py
src/gui/views/: axis_view.py  budget_view.py  import_view.py  indices_view.py  prioritization_view.py  prognosis_view.py  projection_view.py  reports_view.py  segmentation_view.py  treatments_view.py
tests/: conftest.py  test_multicriteria.py  test_optimizer.py  test_prognosis.py  test_projection.py  test_segmentation.py
